--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Tibor Kotosz",
-            "email": "kotosy@gmail.com",
-            "homepage": "https://github.com/tkotosz",
+            "name": "Arturs Vonda",
+            "email": "arturs.vonda@lingoda.com",
+            "homepage": "https://github.com/lingoda",
             "role": "Developer"
         }
     ],
